--- a/SparkStreamingMetablocking/pom.xml
+++ b/SparkStreamingMetablocking/pom.xml
@@ -14,6 +14,15 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>gr.demokritos.iit</groupId>
+            <artifactId>jinsect</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/JInsect.jar</systemPath>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.11</artifactId>
